test/classes/bradc/test_method_noparens_precedence_mismatch.good
test_method_noparens_precedence_mismatch.chpl:11: error: tuple indexing expression is not of integral type
